// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`palette.ts Palette Palette.gray numberOfColors: 2 1`] = `
Array [
  "rgba(0, 0, 0, 1)",
  "rgba(255, 255, 255, 1)",
]
`;

exports[`palette.ts Palette Palette.gray numberOfColors: 7 1`] = `
Array [
  "rgba(0, 0, 0, 1)",
  "rgba(42, 42, 42, 1)",
  "rgba(84, 84, 84, 1)",
  "rgba(126, 126, 126, 1)",
  "rgba(168, 168, 168, 1)",
  "rgba(210, 210, 210, 1)",
  "rgba(252, 252, 252, 1)",
]
`;

exports[`palette.ts Palette Palette.gray numberOfColors: 16 1`] = `
Array [
  "rgba(0, 0, 0, 1)",
  "rgba(17, 17, 17, 1)",
  "rgba(34, 34, 34, 1)",
  "rgba(51, 51, 51, 1)",
  "rgba(68, 68, 68, 1)",
  "rgba(85, 85, 85, 1)",
  "rgba(102, 102, 102, 1)",
  "rgba(119, 119, 119, 1)",
  "rgba(136, 136, 136, 1)",
  "rgba(153, 153, 153, 1)",
  "rgba(170, 170, 170, 1)",
  "rgba(187, 187, 187, 1)",
  "rgba(204, 204, 204, 1)",
  "rgba(221, 221, 221, 1)",
  "rgba(238, 238, 238, 1)",
  "rgba(255, 255, 255, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 2 1`] = `
Array [
  "rgba(226, 211, 193, 1)",
  "rgba(20, 67, 104, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 4 1`] = `
Array [
  "rgba(127, 153, 99, 1)",
  "rgba(221, 213, 206, 1)",
  "rgba(225, 222, 223, 1)",
  "rgba(15, 17, 38, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 7 1`] = `
Array [
  "rgba(124, 153, 103, 1)",
  "rgba(128, 150, 95, 1)",
  "rgba(220, 214, 216, 1)",
  "rgba(135, 156, 103, 1)",
  "rgba(224, 219, 210, 1)",
  "rgba(9, 62, 102, 1)",
  "rgba(225, 222, 222, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 8 1`] = `
Array [
  "rgba(124, 153, 103, 1)",
  "rgba(128, 150, 95, 1)",
  "rgba(220, 214, 216, 1)",
  "rgba(135, 156, 103, 1)",
  "rgba(224, 219, 210, 1)",
  "rgba(9, 62, 102, 1)",
  "rgba(225, 222, 222, 1)",
  "rgba(232, 241, 235, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 27 1`] = `
Array [
  "rgba(122, 148, 96, 1)",
  "rgba(123, 149, 100, 1)",
  "rgba(6, 58, 100, 1)",
  "rgba(220, 203, 188, 1)",
  "rgba(216, 199, 182, 1)",
  "rgba(12, 45, 77, 1)",
  "rgba(19, 61, 104, 1)",
  "rgba(128, 154, 104, 1)",
  "rgba(129, 152, 96, 1)",
  "rgba(221, 203, 184, 1)",
  "rgba(219, 203, 186, 1)",
  "rgba(10, 61, 100, 1)",
  "rgba(241, 251, 248, 1)",
  "rgba(134, 157, 100, 1)",
  "rgba(226, 209, 189, 1)",
  "rgba(222, 208, 192, 1)",
  "rgba(20, 68, 106, 1)",
  "rgba(25, 72, 108, 1)",
  "rgba(230, 213, 197, 1)",
  "rgba(229, 211, 193, 1)",
  "rgba(223, 207, 192, 1)",
  "rgba(17, 16, 34, 1)",
  "rgba(14, 18, 37, 1)",
  "rgba(235, 244, 236, 1)",
  "rgba(232, 216, 193, 1)",
  "rgba(223, 208, 192, 1)",
  "rgba(231, 242, 235, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: 64 1`] = `
Array [
  "rgba(214, 196, 181, 1)",
  "rgba(216, 222, 212, 1)",
  "rgba(116, 143, 91, 1)",
  "rgba(119, 145, 93, 1)",
  "rgba(121, 147, 96, 1)",
  "rgba(122, 147, 99, 1)",
  "rgba(121, 148, 98, 1)",
  "rgba(14, 59, 102, 1)",
  "rgba(222, 206, 191, 1)",
  "rgba(118, 143, 85, 1)",
  "rgba(217, 200, 182, 1)",
  "rgba(220, 216, 210, 1)",
  "rgba(18, 61, 99, 1)",
  "rgba(120, 148, 96, 1)",
  "rgba(123, 150, 98, 1)",
  "rgba(125, 152, 101, 1)",
  "rgba(16, 70, 103, 1)",
  "rgba(17, 68, 106, 1)",
  "rgba(127, 153, 99, 1)",
  "rgba(129, 152, 95, 1)",
  "rgba(221, 204, 183, 1)",
  "rgba(221, 213, 206, 1)",
  "rgba(17, 63, 102, 1)",
  "rgba(121, 149, 100, 1)",
  "rgba(18, 67, 106, 1)",
  "rgba(20, 70, 106, 1)",
  "rgba(20, 71, 109, 1)",
  "rgba(201, 119, 109, 1)",
  "rgba(115, 93, 100, 1)",
  "rgba(133, 155, 98, 1)",
  "rgba(225, 208, 189, 1)",
  "rgba(223, 223, 221, 1)",
  "rgba(224, 220, 211, 1)",
  "rgba(222, 207, 192, 1)",
  "rgba(20, 68, 108, 1)",
  "rgba(233, 243, 238, 1)",
  "rgba(235, 244, 238, 1)",
  "rgba(18, 13, 20, 1)",
  "rgba(237, 242, 236, 1)",
  "rgba(139, 153, 97, 1)",
  "rgba(227, 212, 197, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(225, 222, 223, 1)",
  "rgba(223, 207, 191, 1)",
  "rgba(228, 224, 231, 1)",
  "rgba(15, 17, 38, 1)",
  "rgba(234, 242, 236, 1)",
  "rgba(235, 244, 236, 1)",
  "rgba(236, 243, 235, 1)",
  "rgba(235, 243, 234, 1)",
  "rgba(229, 213, 197, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(225, 223, 223, 1)",
  "rgba(224, 206, 192, 1)",
  "rgba(231, 239, 235, 1)",
  "rgba(17, 20, 42, 1)",
  "rgba(233, 243, 236, 1)",
  "rgba(18, 22, 47, 1)",
  "rgba(15, 19, 44, 1)",
  "rgba(19, 20, 41, 1)",
  "rgba(230, 215, 198, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(224, 215, 211, 1)",
  "rgba(224, 207, 191, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 1 ;numberOfColors: default 1`] = `
Array [
  "rgba(219, 207, 213, 1)",
  "rgba(121, 146, 96, 1)",
  "rgba(124, 151, 100, 1)",
  "rgba(18, 65, 102, 1)",
  "rgba(131, 154, 97, 1)",
  "rgba(224, 223, 221, 1)",
  "rgba(83, 116, 107, 1)",
  "rgba(134, 160, 108, 1)",
  "rgba(235, 244, 236, 1)",
  "rgba(229, 213, 196, 1)",
  "rgba(229, 225, 226, 1)",
  "rgba(21, 67, 101, 1)",
  "rgba(15, 19, 44, 1)",
  "rgba(249, 255, 249, 1)",
  "rgba(231, 214, 197, 1)",
  "rgba(232, 231, 225, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 2 1`] = `
Array [
  "rgba(226, 217, 204, 1)",
  "rgba(71, 92, 85, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 4 1`] = `
Array [
  "rgba(130, 145, 99, 1)",
  "rgba(223, 208, 192, 1)",
  "rgba(233, 240, 233, 1)",
  "rgba(18, 44, 72, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 7 1`] = `
Array [
  "rgba(124, 149, 98, 1)",
  "rgba(89, 109, 95, 1)",
  "rgba(215, 199, 181, 1)",
  "rgba(204, 123, 109, 1)",
  "rgba(226, 211, 195, 1)",
  "rgba(18, 43, 72, 1)",
  "rgba(233, 241, 233, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 8 1`] = `
Array [
  "rgba(124, 149, 98, 1)",
  "rgba(89, 109, 95, 1)",
  "rgba(214, 199, 181, 1)",
  "rgba(204, 123, 109, 1)",
  "rgba(226, 210, 193, 1)",
  "rgba(18, 43, 72, 1)",
  "rgba(224, 222, 216, 1)",
  "rgba(234, 242, 235, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 27 1`] = `
Array [
  "rgba(115, 140, 91, 1)",
  "rgba(121, 147, 96, 1)",
  "rgba(27, 48, 79, 1)",
  "rgba(215, 199, 183, 1)",
  "rgba(186, 175, 153, 1)",
  "rgba(63, 61, 65, 1)",
  "rgba(16, 61, 99, 1)",
  "rgba(205, 122, 108, 1)",
  "rgba(128, 152, 99, 1)",
  "rgba(219, 203, 181, 1)",
  "rgba(212, 197, 178, 1)",
  "rgba(13, 56, 92, 1)",
  "rgba(246, 252, 247, 1)",
  "rgba(151, 145, 130, 1)",
  "rgba(223, 207, 187, 1)",
  "rgba(211, 207, 204, 1)",
  "rgba(19, 68, 105, 1)",
  "rgba(77, 100, 99, 1)",
  "rgba(220, 218, 214, 1)",
  "rgba(226, 210, 193, 1)",
  "rgba(219, 203, 187, 1)",
  "rgba(16, 11, 19, 1)",
  "rgba(17, 19, 40, 1)",
  "rgba(233, 242, 235, 1)",
  "rgba(230, 214, 196, 1)",
  "rgba(222, 207, 191, 1)",
  "rgba(228, 227, 221, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: 64 1`] = `
Array [
  "rgba(189, 177, 156, 1)",
  "rgba(216, 217, 211, 1)",
  "rgba(88, 122, 102, 1)",
  "rgba(113, 139, 87, 1)",
  "rgba(117, 143, 92, 1)",
  "rgba(128, 118, 120, 1)",
  "rgba(120, 146, 94, 1)",
  "rgba(9, 51, 88, 1)",
  "rgba(217, 201, 185, 1)",
  "rgba(115, 94, 86, 1)",
  "rgba(212, 197, 178, 1)",
  "rgba(212, 205, 207, 1)",
  "rgba(35, 49, 78, 1)",
  "rgba(104, 143, 102, 1)",
  "rgba(121, 148, 98, 1)",
  "rgba(124, 152, 101, 1)",
  "rgba(15, 60, 100, 1)",
  "rgba(17, 65, 103, 1)",
  "rgba(129, 152, 96, 1)",
  "rgba(126, 149, 92, 1)",
  "rgba(216, 199, 181, 1)",
  "rgba(204, 207, 196, 1)",
  "rgba(15, 58, 94, 1)",
  "rgba(119, 145, 98, 1)",
  "rgba(21, 64, 97, 1)",
  "rgba(50, 74, 89, 1)",
  "rgba(21, 70, 106, 1)",
  "rgba(205, 122, 108, 1)",
  "rgba(70, 97, 100, 1)",
  "rgba(134, 156, 102, 1)",
  "rgba(224, 208, 187, 1)",
  "rgba(220, 220, 215, 1)",
  "rgba(237, 223, 206, 1)",
  "rgba(221, 207, 191, 1)",
  "rgba(17, 67, 106, 1)",
  "rgba(234, 243, 236, 1)",
  "rgba(246, 253, 247, 1)",
  "rgba(10, 5, 14, 1)",
  "rgba(237, 242, 234, 1)",
  "rgba(162, 155, 137, 1)",
  "rgba(224, 208, 194, 1)",
  "rgba(227, 210, 191, 1)",
  "rgba(223, 218, 220, 1)",
  "rgba(221, 204, 188, 1)",
  "rgba(231, 228, 222, 1)",
  "rgba(17, 15, 29, 1)",
  "rgba(229, 239, 232, 1)",
  "rgba(231, 241, 234, 1)",
  "rgba(235, 242, 234, 1)",
  "rgba(230, 236, 228, 1)",
  "rgba(229, 213, 196, 1)",
  "rgba(230, 213, 193, 1)",
  "rgba(223, 227, 220, 1)",
  "rgba(223, 207, 191, 1)",
  "rgba(225, 231, 229, 1)",
  "rgba(17, 19, 43, 1)",
  "rgba(227, 239, 234, 1)",
  "rgba(66, 53, 47, 1)",
  "rgba(14, 17, 39, 1)",
  "rgba(26, 21, 31, 1)",
  "rgba(231, 215, 198, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(222, 214, 206, 1)",
  "rgba(221, 204, 183, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: 8 ;numberOfColors: default 1`] = `
Array [
  "rgba(213, 208, 204, 1)",
  "rgba(116, 142, 92, 1)",
  "rgba(124, 150, 98, 1)",
  "rgba(15, 60, 98, 1)",
  "rgba(140, 154, 111, 1)",
  "rgba(220, 219, 215, 1)",
  "rgba(79, 93, 92, 1)",
  "rgba(205, 123, 108, 1)",
  "rgba(233, 242, 235, 1)",
  "rgba(215, 199, 181, 1)",
  "rgba(234, 220, 204, 1)",
  "rgba(21, 67, 103, 1)",
  "rgba(17, 18, 37, 1)",
  "rgba(246, 253, 247, 1)",
  "rgba(226, 210, 193, 1)",
  "rgba(227, 228, 223, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 2 1`] = `
Array [
  "rgba(226, 216, 203, 1)",
  "rgba(69, 92, 84, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 4 1`] = `
Array [
  "rgba(130, 145, 99, 1)",
  "rgba(223, 208, 191, 1)",
  "rgba(233, 240, 233, 1)",
  "rgba(18, 44, 72, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 7 1`] = `
Array [
  "rgba(123, 149, 100, 1)",
  "rgba(120, 145, 93, 1)",
  "rgba(216, 201, 183, 1)",
  "rgba(196, 130, 113, 1)",
  "rgba(226, 211, 195, 1)",
  "rgba(18, 44, 72, 1)",
  "rgba(233, 240, 233, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 8 1`] = `
Array [
  "rgba(123, 149, 100, 1)",
  "rgba(120, 145, 93, 1)",
  "rgba(216, 201, 183, 1)",
  "rgba(196, 130, 113, 1)",
  "rgba(226, 211, 194, 1)",
  "rgba(18, 44, 72, 1)",
  "rgba(225, 224, 218, 1)",
  "rgba(234, 243, 235, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 27 1`] = `
Array [
  "rgba(116, 141, 93, 1)",
  "rgba(122, 150, 99, 1)",
  "rgba(8, 52, 91, 1)",
  "rgba(217, 203, 191, 1)",
  "rgba(210, 195, 176, 1)",
  "rgba(44, 52, 71, 1)",
  "rgba(17, 62, 100, 1)",
  "rgba(200, 126, 111, 1)",
  "rgba(129, 151, 96, 1)",
  "rgba(219, 203, 182, 1)",
  "rgba(217, 201, 185, 1)",
  "rgba(14, 59, 96, 1)",
  "rgba(246, 253, 247, 1)",
  "rgba(137, 155, 109, 1)",
  "rgba(224, 209, 189, 1)",
  "rgba(214, 208, 204, 1)",
  "rgba(18, 68, 105, 1)",
  "rgba(59, 87, 96, 1)",
  "rgba(224, 216, 206, 1)",
  "rgba(229, 212, 194, 1)",
  "rgba(222, 206, 190, 1)",
  "rgba(17, 13, 23, 1)",
  "rgba(17, 19, 41, 1)",
  "rgba(234, 243, 235, 1)",
  "rgba(232, 216, 198, 1)",
  "rgba(223, 207, 192, 1)",
  "rgba(228, 233, 226, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: 64 1`] = `
Array [
  "rgba(202, 188, 169, 1)",
  "rgba(216, 220, 212, 1)",
  "rgba(112, 139, 93, 1)",
  "rgba(118, 143, 92, 1)",
  "rgba(120, 146, 95, 1)",
  "rgba(119, 142, 104, 1)",
  "rgba(121, 148, 97, 1)",
  "rgba(11, 56, 94, 1)",
  "rgba(220, 205, 189, 1)",
  "rgba(110, 134, 82, 1)",
  "rgba(215, 199, 181, 1)",
  "rgba(215, 209, 212, 1)",
  "rgba(23, 57, 90, 1)",
  "rgba(118, 148, 95, 1)",
  "rgba(122, 150, 98, 1)",
  "rgba(124, 152, 101, 1)",
  "rgba(16, 66, 102, 1)",
  "rgba(17, 67, 105, 1)",
  "rgba(128, 153, 98, 1)",
  "rgba(128, 150, 94, 1)",
  "rgba(220, 204, 183, 1)",
  "rgba(213, 207, 202, 1)",
  "rgba(16, 61, 100, 1)",
  "rgba(121, 149, 99, 1)",
  "rgba(20, 66, 103, 1)",
  "rgba(32, 73, 98, 1)",
  "rgba(21, 70, 107, 1)",
  "rgba(205, 122, 108, 1)",
  "rgba(85, 97, 95, 1)",
  "rgba(133, 155, 101, 1)",
  "rgba(225, 209, 189, 1)",
  "rgba(222, 224, 218, 1)",
  "rgba(235, 223, 208, 1)",
  "rgba(221, 207, 192, 1)",
  "rgba(19, 68, 106, 1)",
  "rgba(234, 243, 237, 1)",
  "rgba(245, 251, 245, 1)",
  "rgba(15, 10, 17, 1)",
  "rgba(237, 242, 234, 1)",
  "rgba(160, 154, 133, 1)",
  "rgba(225, 210, 194, 1)",
  "rgba(229, 213, 193, 1)",
  "rgba(225, 219, 222, 1)",
  "rgba(222, 206, 189, 1)",
  "rgba(230, 229, 225, 1)",
  "rgba(15, 16, 34, 1)",
  "rgba(232, 241, 234, 1)",
  "rgba(234, 243, 235, 1)",
  "rgba(235, 243, 235, 1)",
  "rgba(231, 241, 232, 1)",
  "rgba(229, 213, 196, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(227, 229, 222, 1)",
  "rgba(223, 207, 192, 1)",
  "rgba(229, 239, 232, 1)",
  "rgba(16, 19, 42, 1)",
  "rgba(231, 243, 235, 1)",
  "rgba(28, 28, 47, 1)",
  "rgba(14, 18, 44, 1)",
  "rgba(25, 22, 36, 1)",
  "rgba(231, 215, 199, 1)",
  "rgba(230, 213, 195, 1)",
  "rgba(222, 215, 212, 1)",
  "rgba(224, 206, 188, 1)",
]
`;

exports[`palette.ts Palette Palette.imageData colorQuantCycles: default ;numberOfColors: default 1`] = `
Array [
  "rgba(215, 212, 208, 1)",
  "rgba(118, 144, 93, 1)",
  "rgba(124, 151, 99, 1)",
  "rgba(16, 62, 100, 1)",
  "rgba(134, 152, 101, 1)",
  "rgba(222, 222, 217, 1)",
  "rgba(82, 100, 96, 1)",
  "rgba(199, 130, 114, 1)",
  "rgba(233, 242, 235, 1)",
  "rgba(220, 204, 187, 1)",
  "rgba(230, 225, 221, 1)",
  "rgba(27, 67, 99, 1)",
  "rgba(17, 18, 37, 1)",
  "rgba(246, 253, 247, 1)",
  "rgba(229, 213, 195, 1)",
  "rgba(230, 233, 224, 1)",
]
`;

exports[`palette.ts Palette Palette.number numberOfColors: 8 1`] = `
Array [
  "rgba(0, 0, 0, 1)",
  "rgba(0, 0, 255, 1)",
  "rgba(0, 255, 0, 1)",
  "rgba(0, 255, 255, 1)",
  "rgba(255, 0, 0, 1)",
  "rgba(255, 0, 255, 1)",
  "rgba(255, 255, 0, 1)",
  "rgba(255, 255, 255, 1)",
]
`;

exports[`palette.ts Palette Palette.number numberOfColors: 27 1`] = `
Array [
  "rgba(0, 0, 0, 1)",
  "rgba(0, 0, 127, 1)",
  "rgba(0, 0, 254, 1)",
  "rgba(0, 127, 0, 1)",
  "rgba(0, 127, 127, 1)",
  "rgba(0, 127, 254, 1)",
  "rgba(0, 254, 0, 1)",
  "rgba(0, 254, 127, 1)",
  "rgba(0, 254, 254, 1)",
  "rgba(127, 0, 0, 1)",
  "rgba(127, 0, 127, 1)",
  "rgba(127, 0, 254, 1)",
  "rgba(127, 127, 0, 1)",
  "rgba(127, 127, 127, 1)",
  "rgba(127, 127, 254, 1)",
  "rgba(127, 254, 0, 1)",
  "rgba(127, 254, 127, 1)",
  "rgba(127, 254, 254, 1)",
  "rgba(254, 0, 0, 1)",
  "rgba(254, 0, 127, 1)",
  "rgba(254, 0, 254, 1)",
  "rgba(254, 127, 0, 1)",
  "rgba(254, 127, 127, 1)",
  "rgba(254, 127, 254, 1)",
  "rgba(254, 254, 0, 1)",
  "rgba(254, 254, 127, 1)",
  "rgba(254, 254, 254, 1)",
]
`;
